@@ -8,7 +8,6 @@
 #include "Common/util_geom.h"
 #include "GameObjects/gameobjlive.h"
 #include "GameObjects/obj_types.h"
-//#include "GameObjects/weapon.h"
 
 /*
 	Powerups are non-hostile objects that, when collided with by the player ship, 
@@ -19,10 +18,12 @@ namespace Defcon
 {
 	class IPowerup : public IGameObject
 	{
+		typedef IGameObject Super;
+
 		public:
-			IBullet();
-			virtual void Tick         (float DeltaTime) override;
-			virtual void DrawSmall    (FPainter& PaintArgs, const I2DCoordMapper& CoordMapper, FSlateBrush& Brush) override {}
+			IPowerup();
+			//virtual void Tick         (float DeltaTime) override;
+			//virtual void DrawSmall    (FPainter& PaintArgs, const I2DCoordMapper& CoordMapper, FSlateBrush& Brush) override {}
 			//virtual void GetInjurePt  (CFPoint&) const override;
 			//virtual bool TestInjury   (const CFRect&) const override;
 			virtual void SetSpeed     (float f) { Speed = f; }
@@ -37,12 +38,11 @@ namespace Defcon
 	{
 		// Player ship shields get an immediate regenerative boost.
 
+		typedef IPowerup Super;
+
 		public:
 			CShieldPowerup();
 
-#ifdef _DEBUG
-			virtual const char* GetClassname() const;
-#endif
 	};
 
 
@@ -51,12 +51,11 @@ namespace Defcon
 		// Player ship fires two rounds per shot, for a limited time.
 		// Useful when e.g. trying to hit dynamos protected by numerous spacehums.
 
+		typedef IPowerup Super;
+
 		public:
 			CDoubleGunsPowerup();
 
-#ifdef _DEBUG
-			virtual const char* GetClassname() const;
-#endif
 	}; 
 
 
@@ -66,11 +65,10 @@ namespace Defcon
 		// Handy if e.g. one needs to collide with pods which normally
 		// will take down all shields immediately.
 
+		typedef IPowerup Super;
+
 		public:
 			CInvincibilityPowerup();
 
-#ifdef _DEBUG
-			virtual const char* GetClassname() const;
-#endif
 	}; 
 }
